# circuit_breaker

./: LICENSE  README.md  cli.py  pyproject.toml
circuit_breaker/: breaker.py  error.py
short_circuit/: breaker.py  error.py  manager.py
tests/: test_breaker.py
