
[tool.poetry]
name = "short_circuit"
version = "0.1.0"
description = "A small lib that implements the CircuitBreaker pattern"
authors = ["Maxim Van Lyl"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
